--- a/.github/workflows/terratest04.yml
+++ b/.github/workflows/terratest04.yml
@@ -1,4 +1,4 @@
-name: Terratest - terraform-provider-easy-brick-category-purpose
+name: Terratest - terraform-generic-easy-context - 04-muffin
 
 # on:
 #   push:
@@ -24,7 +24,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.21
+        go-version: 1.20
 
     - name: Install Terraform
       uses: hashicorp/setup-terraform@v1
@@ -39,9 +39,9 @@ jobs:
       run: |
         go get -v -t -d ./...
         go test -v -timeout 99999s .
-      working-directory: ./.test
+      working-directory: ./.test/04-muffin
 
     - name: Clean up failed resources
       run: |
-        az group delete --name rgrp-tde3-it-terratest-network-nic --subscription ${{ secrets.ARM_SUBSCRIPTION_ID }} --yes
+        az group delete --name rgrp-tde3-it-terratest-context-muffin --subscription ${{ secrets.ARM_SUBSCRIPTION_ID }} --yes
       if: failure()
