--- a/.config/.terraform-docs.yml
+++ b/.config/.terraform-docs.yml
@@ -26,12 +26,27 @@ content: |-
   
   ### Example 1
   ```hcl
-  {{ include ".examples/example1.tf" }}
+  {{ include "examples/01-choco/test.tf" }}
   ```
 
   ### Example 2
   ```hcl
-  {{ include ".examples/example2.tf" }}
+  {{ include "examples/02-candy/test.tf" }}
+  ```
+
+  ### Example 3
+  ```hcl
+  {{ include "examples/03-icecream/test.tf" }}
+  ```
+
+  ### Example 2
+  ```hcl
+  {{ include "examples/04-muffin/test.tf" }}
+  ```
+
+  ### Example 2
+  ```hcl
+  {{ include "examples/05-waffel/test.tf" }}
   ```
 
   {{ .Resources }}
