--- a/.config/.terraform-docs.yml
+++ b/.config/.terraform-docs.yml
@@ -51,20 +51,28 @@ content: |-
   {{ include "examples/02-candy/oci_dev.tf" }}
   ```
 
+  With his empire expanding and his name synonymous with chocolate, Willie Wonka's ambitious gaze turned to the frosty realm of ice creams. Dreaming of crafting frozen treats that echoed his confectionery's creativity, he sought to launch ice creams under the Wonka brand. However, his plans were soon met with a chilling reception from the EU anti-trust authorities. His intent to acquire Istanbul Icecream Industries—a behemoth that churned out the majority of the world's ice cream—stirred a cauldron of legal battles over monopoly concerns. The authorities feared that such a consolidation would freeze out competition and leave consumers with a vanilla landscape of ice cream choices. Wonka, never one to shy away from a challenge, geared up for a legal labyrinth, his spirit undeterred. He ardently believed that the melding of his chocolate expertise with the ice cream giant would result in a symphony of flavors that could bring even more joy to the world. The outcome of these frigid confrontations remained uncertain, but Wonka's determination to add a scoop of wonder to his sweet empire burned hotter than ever. Finally with the help of his professional legal department and millions of dollars he accomplished this biggest achievement of his life.
+
   ### Example for Istanbul Icecream Industries
   ```hcl
   {{ include "examples/03-icecream/test.tf" }}
   ```
+
+  As Wonka navigated the frosty tides of his ice cream endeavor, a chance encounter in London brought warmth to his heart. It was there, amidst the quaint charm of Notting Hill, that he met the enchanting Eleanor Sugarworth, proprietor of the local treasure, London Muffin Manufactures. Eleanor, with her keen taste for baked delight and a spark in her eyes, captivated Willie at first sight. Their shared passion for sweets and an instinct for business made for a perfect blend. As their fondness for each other grew, so did Willie's desire to bring Eleanor's muffin magic under the vast umbrella of Wonka's Sweet Companies. With his support and vision, the once-small business transformed into a global sensation, its muffins becoming as renowned as Wonka's chocolates. Eleanor and Willie's partnership in business mirrored their blossoming love, culminating in marriage. The London Muffin Manufactures' success story became a testament to their bond, enriching the Wonka brand with warmth, love, and freshly baked success.
 
   ### Example for London Muffin Manufactures
   ```hcl
   {{ include "examples/04-muffin/test.tf" }}
   ```
 
+  As the years ripened Willie Wonka's legacy, so did his passions evolve. In the golden years of his career, his sweet tooth found an unlikely new muse—waffles. Wonka's zest for innovation ignited a fiery quest to outdo the renowned Belgian waffles with his own creation. He established the Amsterdam Waffel Works, a dedicated haven for crafting a waffle that would leave the Belgians in awe. His vision was clear: to blend the crisp, golden texture of traditional waffles with the whimsical flavors that had become his signature. The Amsterdam Waffel Works quickly became a laboratory of delight, where Wonka could be found perfecting recipes that pushed the boundaries of waffle wizardry. His waffles were not mere breakfast fare; they were edible masterpieces, a brand-new canvas for his never-ending creativity. As word of Wonka's waffle wonders spread, it wasn't just Amsterdam that was abuzz; the whole world eagerly awaited a taste of his latest culinary triumph.
+
   ### Example for Amsterdam Waffel Works
   ```hcl
   {{ include "examples/05-waffel/test.tf" }}
   ```
+
+  In the intricate dance of managing his global empire, Willie Wonka recognized the need for a harmonious technological symphony. Enter Lederworks, a company renowned for their prowess in terraform infrastructure as code. They crafted for Wonka an ingenious terraform context module, a marvel that seamlessly wove together the diverse tapestry of his subsidiaries and their cloud environments. This framework of constants store became the crown jewel of the empire's IT strategy, enabling every company within the Wonka fold to operate with synchronized precision and agility. It was a digital alchemy that transformed complex IT landscapes into a unified realm, one where resources flowed as smoothly as chocolate from a fountain. Lederworks’ solution was not just a technical feat; it was a testament to Wonka's foresight in embracing innovation to uphold the enchantment of his brand. With this new, formidable tool at his disposal, Willie Wonka's businesses could adapt and thrive in an ever-changing world, bound together by a singular, efficient framework of magic and code.
 
   {{ .Requirements }}
 
