--- a/.github/workflows/terratest01.yml
+++ b/.github/workflows/terratest01.yml
@@ -11,6 +11,10 @@ jobs:
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      TF_VAR_TENANCY_OCID: ${{ secrets.OCI_TENANCY }}
+      TF_VAR_USER_OCID: ${{ secrets.OCI_USER }}
+      TF_VAR_PRIVATE_KEY: ${{ secrets.OCI_KEY }}
+      TF_VAR_FINGERPRINT: ${{ secrets.OCI_FINGERPRINT }}
 
     steps:
     - name: Checkout repository
