--- a/.github/workflows/terratest03.yml
+++ b/.github/workflows/terratest03.yml
@@ -17,9 +17,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v5
       with:
         go-version: 1.21
+        cache-dependency-path: .test/**/*.sum
 
     - name: Install Terraform
       uses: hashicorp/setup-terraform@v1
