--- a/.github/workflows/terratest04.yml
+++ b/.github/workflows/terratest04.yml
@@ -14,17 +14,18 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v5
       with:
         go-version: 1.21
+        cache-dependency-path: .test/**/*.sum
 
     - name: Install Terraform
-      uses: hashicorp/setup-terraform@v1
+      uses: hashicorp/setup-terraform@v3
       with:
-        terraform_version: 1.8.0
+        terraform_version: 1.8.1
         terraform_wrapper: false
 
     - name: Login to Azure CLI
