--- a/.github/workflows/terratest03.yml
+++ b/.github/workflows/terratest03.yml
@@ -1,7 +1,7 @@
 name: Terratest - terraform-generic-easy-context - 03-icecream
 
-on:
-  - pull_request
+# on:
+#   - pull_request
 
 jobs:
   build:
